# parse_d2l_rosters

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/d2lparse/: __main__.py
