[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "d2lparse"
version = "0.1"
description = "A command line tool to parse exported D2L grade/roster CSVs"
authors = [{ name = "Aaron Ingalls" }]
requires-python = ">=3.8"

[project.scripts]
d2lparse = "d2lparse.__main__:main"
